# trade-bot-colab-notebooks

./: .env.example  .gitignore  README.md  pyproject.toml  regime_classifier_training.ipynb  register_model.py  requirements.txt  train_regime.py
